--- a/developing_a_metrics_plan.adoc
+++ b/developing_a_metrics_plan.adoc
@@ -15,11 +15,13 @@ Transparency is a key ingredient in all open source projects, so it is important
 Community metrics will not necessarily provide a full picture of the community, but they do offer important insight into the state of the community. For example, metrics can show if there are regular activities on project's code, bugs/issues, documentation, etc. for the project. Also, when new community members join a new community, they typically struggle with connecting with more experienced members.  For example, a set of metrics dashboard that provides list of active documentation contributors could be handy for anyone interested in contributing to project documentation.  Some communities even have a dashboard of _first time_ contributors to highlight new community members. These may seem like small things, but they could go a long way to help new community members onboard into a project. 
 
 === *Identify potential bottlenecks in the community*
-As open source projects grow, you will typically face challenges with responsiveness to community members. For example, code reviews may take longer or you may see a growing backlog of issues. If you have a good set of metrics (e.g. average time to close issues, median time for code review, etc.)that you review on a regular basis, they could server as early warning signs before you start to have a large number of dissatisfied community members. 
+As open source projects grow, you will typically face challenges with responsiveness to community members. For example, code reviews may take longer or you may see a growing backlog of issues. If you have a good set of metrics (e.g. average time to close issues, median time for code review, etc.) that you review on a regular basis, they could server as early warning signs before you start to have a large number of dissatisfied community members. 
 
 
 == *Choosing the right metrics for your community*
+No two open source communities are the same, so it's natural for each community to have their own set of metrics. There are many factors that can influence what metrics are right for your community. In many communities, you often see emphasis on the speed of merging code. However, if your project is in a heavily regulated industry (e.g. energy, medicine, etc.) where decision to merge new fixes/features can take a long time, you probably would not have several different metrics for _code review efficiency_.  
 
+As you are developing a set of community metrics, it is important to work with community members to get their input and have many people contribute to your community metrics. Hearing from a diverse group of the community is important to ensure that the metrics are inclusive and not just focusing on the work of a subset of the community. For example, if internationalization is important for your project, you want to ensure that your metrics reflect internationalization work. It's also a good practice to review the metrics periodically with the community and discuss if any adjustments are needed for your metrics. Even within the same community, you will likely need to evolve your metrics along with the community as your needs change.
 
 == Developing metrics for your community
 
