--- a/developing_a_metrics_plan.adoc
+++ b/developing_a_metrics_plan.adoc
@@ -17,7 +17,6 @@ Community metrics will not necessarily provide a full picture of the community, 
 === *Identify potential bottlenecks in the community*
 As open source projects grow, you will typically face challenges with responsiveness to community members. For example, code reviews may take longer or you may see a growing backlog of issues. If you have a good set of metrics (e.g. average time to close issues, median time for code review, etc.) that you review on a regular basis, they could server as early warning signs before you start to have a large number of dissatisfied community members. 
 
-
 == *Choosing the right metrics for your community*
 No two open source communities are the same, so it's natural for each community to have their own set of metrics. There are many factors that can influence what metrics are right for your community. In many communities, you often see emphasis on the speed of merging code. However, if your project is in a heavily regulated industry (e.g. energy, medicine, etc.) where decision to merge new fixes/features can take a long time, you probably would not have several different metrics for _code review efficiency_.  
 
@@ -26,15 +25,17 @@ As you are developing a set of community metrics, it is important to work with c
 == Developing metrics for your community
 
 === *Take advantage of available resources in your software tools*  
-In the past many people had to write complex scripts/queries to get metrics for their communities. Nowadays, most of the software tools (code repositories, forums, issue trackers, wiki's, etc.) that open source projects use have APIs, plug-ins or even built-in dashboards that makes it easy collect data for your metrics. So if you use tools like Discourse, GitHub, GitLab, Jira, or others, you may be able to save a lot of time by reading up their documentations prior to metrics implementation 
-
-=== *Resources/examples from other communities*  
-A number of open source communities have good documentation/code for their community dashboards that many other communities can learn from. Many people may have seen the CNCF dashboard is at https://k8s.devstats.cncf.io/ and you can find details on their `devstats` project for their dashboard in the CNCF's repo at https://github.com/cncf/devstats. 
-
-Another good example is the Ruby community dashboard at https://contributors.rubyonrails.org/contributors and their FAQ page (https://contributors.rubyonrails.org/faq) provides good insight into why they developed the dashboard and some of their implementation decisions. 
+In the past many people had to write complex scripts/queries to get metrics for their communities. Nowadays, most of the software tools (code repositories, forums, issue trackers, wiki's, etc.) that open source projects use have APIs, plug-ins or even built-in dashboards that makes it easy collect data for your community. So if you use tools like Discourse, GitHub, GitLab, Jira, or others, you may be able to save a lot of time by reading their documentations prior to implementing a new set of metrics from scratch. 
 
 === *The CHAOSS project* 
-Not surprisingly, there's an open source project that is focused on community metrics. (https://chaoss.community) develops metrics definition and sample implementation for open source communities. 
+Not surprisingly, there's also an open source project that is focused on community metrics. The project is called CHAOSS (Community Health Analytics for Open Source software) and it has community members from academia, companies that participate in many open source projects, open source foundations, and others.  On the CHAOSS website (https://chaoss.community), you will find details on metrics across different categories plus implementation example for many of these metrics.  
+
+If you browse through CHAOSS metrics, you will likely find plenty of metrics (and implementation) that will be applicable to your community. If you have an idea for new metrics that is not yet in CHAOSS, you can always start a discussion on a new metrics in the CHAOSS community. 
+
+=== *Resources/examples from other communities*  
+A number of open source communities have good documentation/code for their community dashboards that many other communities can take advantage of. Many readers may be familiar with the CNCF dashboard is at https://k8s.devstats.cncf.io/ and you can find details on their `devstats` project for their dashboard in the CNCF's repo at https://github.com/cncf/devstats. 
+
+Another good example is the Ruby community dashboard at https://contributors.rubyonrails.org/contributors and their FAQ page (https://contributors.rubyonrails.org/faq) provides good insight into why they developed the dashboard and some of their implementation decisions. 
 
 == Metrics pitfalls
 
