--- a/developing_a_metrics_plan.adoc
+++ b/developing_a_metrics_plan.adoc
@@ -42,10 +42,15 @@ Another good example is the Ruby community dashboard at https://contributors.rub
 Metrics are certainly important, but there are definitely shortcomings that we want to be aware of. 
 
 . People often measure the most easily measurable in their metrics: This is human nature as we all want to do what's easier. However, you run the risk of neglecting  important aspects of the community if you only focus on easily mesurable metrics in your community. For example, it's often easier to focus on inputs (e.g. number of commits/merge requests/pull requests) compared to outputs (e.g. the impact of a commit/merge request/pull request). I'm sure we will all agree that ignoring outputs from the community will provide an incomplete picture of the community. 
-. Over-reliance on metrics can lead to less insight: No set of metrics will provide a full picture of communities (or any other organizations for that matter). Although it is important to have a standardized set of metrics so that you can gauge your community's health over time, there will always be things that are extremely difficult to measure or quantify. For example, we want contributors to feel a strong sense of belonging in the community and enjoy collaborating with other community members.  Whether this is happening or not would be difficult to quantify, but you still want have a good sense of if this is happening through means other than metrics collections. 
-. Ignoring intrnsic motivation: This is particularly important in open source communities as most of the contributors are volunteers who contribute in their own time. 
+. Over-reliance on metrics will provide incomplete insight: No set of metrics will provide a full picture of communities (or any other organizations for that matter). Although it is important to have a standardized set of metrics so that you can gauge your community's progress over time, there will always be things that are extremely difficult to measure or quantify. For example, we want contributors to feel a strong sense of belonging in the community and enjoy collaborating with other community members.  Whether this is happening or not would be difficult to quantify, but you still want to have a good sense of this even if it requires other  means besides metrics collections. 
+. Ignoring intrnsic motivation: People often join (especially volunteer) organizations because they are intrincically motivated such as belief in group's mission or a sense of belonging with other members. If there is too much emphasis on people's contribution (or input) in metrics, you run the risk of losing sight of why people joined the organization in the first place. Most contributors in open source communities are volunteers who contribute in their own time, so ignoring their intrinscic motivation can lead to negative consequences in the community. 
 
-=== Examples of poor uses of metrics (esp. in Open Source communities). 
+Following are examples of poor uses of metrics in Open Source communities. 
+
+. Vanity metrics. 
+. Making comparisons between open source communities based on a few metrics. 
+. Gaming contribution metrics. 
+. Too much focus on code contributions.
 
 
 == Metrics dos and don'ts 
