--- a/developing_a_metrics_plan.adoc
+++ b/developing_a_metrics_plan.adoc
@@ -48,9 +48,9 @@ Metrics are certainly important, but there are definitely shortcomings that we w
 Following are examples of poor uses of metrics in open source communities. 
 
 . Vanity metrics: Vanity metrics isn't just limited to open source, but I thought it was worth listing it here as it has the potential to discourage contributors. From time to time you see quotes like "Project XYZ is the fastest growing open source community based on ".   
-. Making comparisons between open source communities based on a few metrics: Sometime you hear things like "Project A had more than 5,000 people in their last  conference" or "Project B has 1,000 contributors". No two open source projects are alike as you may be in different industries, in different stages of the life cycle, or have a different scope. Before you think about wanting 1,000 contributors in your community, you may need to ask basic questions like do we really need 1,000 people for project's scope?  Not making apples-to-apples comparision. 
-. Gaming contribution metrics. 
-. Too much focus on code contributions: It may be because there are more tools available to capture code activities, but there's a tendency to focus mostly on code contributions in open source communities. However, it is important to remember other valuable contributions that community members make such as answering questions on forums, triaging issues, maintaining wiki pages, etc. There should be an effort to ensure that community metrics reflect variety of contributions (both code and non-code) in the community. 
+. Making comparisons between open source communities based on a few metrics: Sometimes you will hear things like "Project A had more than 5,000 people in their last  conference" or "Project B has 1,000 contributors". Before you are tempted to compare your open source community to others, it's important to rememeber that no two open source projects are alike. You may be in a different industry, in different stages of project maturity, or have a different scope. More often than not, it's going to be challenging to make apples-to-apples comparision between different open source projects. Before you think about wanting 1,000 contributors in your community, you may want to ask basic questions like do you really need 1,000 people to accomplish your project's goals? 
+. Gaming contribution metrics: 
+. Too much focus on code contributions: It may be because there are more tools available to capture code activities, but there's a tendency to focus mostly on code contributions in open source communities. However, it is important to remember other valuable contributions such as answering questions on forums, triaging issues, maintaining wiki pages, etc. There should be an effort to ensure that community metrics reflect variety of contributions (both code and non-code) in the community. 
 
 
 == Metrics dos and don'ts 
